# shelfwise

./: .gitignore  DEMO_PRESENTATION.html  FRONTEND_WALKTHROUGH.md  PROJECT_REPORT.md  README.md
backend/: alert_system.py  demand_forecasting.py  main.py  planogram_compliance.py  pyproject.toml  requirements.txt  split_dataset.py  test_alerts.py  test_compliance.py  test_forecasting_api.py  test_gdino.py  test_inference.py  test_planogram_api.py  test_vision_pipeline.py  train_fast.py
backend/scripts/: inference_shelf.py  train_shelfwise.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: SharedComponents.jsx
frontend/src/lib/: api.js
frontend/src/pages/: AlertsPage.jsx  AnalyticsPage.jsx  CompliancePage.jsx  Dashboard.jsx  DetectionPage.jsx  ForecastPage.jsx  LandingPage.jsx
yolov10/scripts/: colab_training_setup.py  evaluate_model.py  extract_frames.py  split_dataset.py  train_shelfwise.py
