[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["logs", "docker", "figures", "scripts", "docs"]

[project]
name = "shelfwise-backend"
version = "0.1.0"
description = "Shelfwise backend API"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "ultralytics",
    "Pillow",
    "numpy",
    "opencv-python-headless",
    "autodistill-grounding-dino",
    "xgboost",
    "scikit-learn",
    "pandas"
]
